update class names/numbers and labeling assignments

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -10,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,14 +19,17 @@
     "- Downsample images\n",
     "- Define village boundary polygons\n",
     "- Crop DSMs with village boundaries\n",
-    "- How many classes do we want to identify?\n",
-    "    - Roads\n",
-    "    - Tracks?\n",
-    "    - Buildings\n",
-    "    - Manmade water reservoirs\n",
-    "    - Parks/graveyards\n",
-    "    - Coastal/bridge erosion prevention (rocks/pilings)\n",
-    "- Consider manual labeling or automated using height + NDVI(?)"
+    "- Classes\n",
+    "    - Buildings - 1\n",
+    "    - Paved road - 2\n",
+    "    - Unpaved road - 3\n",
+    "    - Manmade water - 4\n",
+    "    - Other - 5\n",
+    "- Consider manual labeling or automated using height + NDVI(?)\n",
+    "\n",
+    "#### Labeling assignment\n",
+    "- Kivalina & Kotzebue: Danny\n",
+    "- Shishmaref & Shungnak/Kobuk: Lysander"
    ]
   },
   {
