note-taking and data wrangling; renamed rescal to datawrangling

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -65,6 +65,43 @@
     "    # im = ((im - im.max()) / (im.max() - im.min()) * 255).astype(np.uint8)\n",
     "    # plt.imshow(im[..., :3])"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2023-01-16\n",
+    "\n",
+    "### End of day To-Dos:\n",
+    "- Fix bug in patch train label\n",
+    "    - I think it has to do with a few of the files having abnormal sizes (e.g. 830x2500 instead of 2500x2500). Possible solution could be to get the most common size and then exclude images that don't match that size.\n",
+    "\n",
+    "### U-Net segmentation steps\n",
+    "\n",
+    "1. Remerge RGB and CIR and add NDVI channel\n",
+    "2. Reorganize files into usable file structure\n",
+    "    - orig_20cm\n",
+    "        - {filename}\n",
+    "            - rgbiv\n",
+    "                - {filename}_rgbi.tif\n",
+    "            - labels\n",
+    "                - {filename}_labels.tif\n",
+    "\n",
+    "2. Patchify tiles into 256x256 patches, using the following file structure:\n",
+    "    - 256_20cm\n",
+    "        - {filename}\n",
+    "            - rgbiv\n",
+    "                - {filename}_rgbi.tif\n",
+    "            - labels\n",
+    "                - {filename}_labels.tif\n",
+    "\n",
+    "3. (Optional) Perform coarse grid search\n",
+    "\n",
+    "4. Run segmentation with all classes squashed to one\n",
+    "\n",
+    "5. Run segmentation with classes preserved"
+   ]
   }
  ],
  "metadata": {
@@ -83,7 +120,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:01:00) \n[Clang 13.0.1 ]"
+   "version": "3.9.13 | packaged by conda-forge | (main, May 27 2022, 17:00:52) \n[Clang 13.0.1 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
