add todos for tomorrow

--- a/notes.ipynb
+++ b/notes.ipynb
@@ -102,6 +102,21 @@
     "\n",
     "5. Run segmentation with classes preserved"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2023-01-17\n",
+    "\n",
+    "### End of day To-Dos:\n",
+    "\n",
+    "- Exclude patches with nodata in them\n",
+    "- Confirm that IoU loss/setup is correct (look at old ML course files)\n",
+    "- Try training on only a single class\n",
+    "- Try including NIR + NDVI"
+   ]
   }
  ],
  "metadata": {
