--- a/data_wrangling.ipynb
+++ b/data_wrangling.ipynb
@@ -18,9 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import rasterio as rio\n",
@@ -60,6 +69,7 @@
     "\n",
     "    for i in range(4):\n",
     "        max = r_arr[i].max()\n",
+    "        # max = 2**16\n",
     "        r_arr[i] = (r_arr[i] / max) * 255\n",
     "    # r_arr = np.flip(r_arr[0:3, ...], axis=0)\n",
     "    R = r_arr[2].copy()\n",
@@ -150,65 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_10_2_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_10_3_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_10_4_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_10_5_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_11_1_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_11_2_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_11_3_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_11_4_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_11_5_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_12_1_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_12_2_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_12_3_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_12_4_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_13_1_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_13_2_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_13_3_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_13_4_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_14_2_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_14_3_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_1_8_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_1_9_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_2_10_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_2_7_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_2_8_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_2_9_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_3_6_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_3_7_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_3_8_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_3_9_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_4_6_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_4_7_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_4_8_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_4_9_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_5_5_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_5_6_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_5_7_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_6_5_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_6_6_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_6_7_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_7_4_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_7_5_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_7_6_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_8_4_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_8_5_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_8_6_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_9_3_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_9_4_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_9_5_labels.tif\n",
-      "data/WA_Shishmaref_01_20210628/20cm/Ortho/WA_Shishmaref_01_20210628_20cm_Ortho_9_6_labels.tif\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "REORGANIZE = False\n",
     "\n",
@@ -294,26 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  0,   0,   0, ...,   0,   0,   0],\n",
-       "       [  0,   0,   0, ...,   0,   0,   0],\n",
-       "       [  0,   0,   0, ...,   0,   0,   0],\n",
-       "       ...,\n",
-       "       [  0,   0,   0, ..., 150, 152, 152],\n",
-       "       [  0,   0,   0, ..., 145, 149, 151],\n",
-       "       [  0,   0,   0, ..., 143, 147, 149]], dtype=uint16)"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Allow division by zero\n",
     "np.seterr(divide=\"ignore\", invalid=\"ignore\")\n",
@@ -335,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -348,38 +285,38 @@
       "bad ims length: 2\n",
       "m: 16\n",
       "Cull rows: -32\n",
-      "Shape before: (368, 512, 512, 3)\n",
-      "Shape after: (336, 512, 512, 3)\n",
+      "Shape before: (368, 512, 512, 5)\n",
+      "Shape after: (336, 512, 512, 5)\n",
       "\n",
       "Removing images with nodata values...\n",
       "-------------------------------------\n",
       "Training set size with nodata: 336\n",
       "\n",
       "Patched data sizes w/o nodata:\n",
-      "data_train: (178, 512, 512, 3)\n",
+      "data_train: (178, 512, 512, 5)\n",
       "data_label: (178, 512, 512, 1)\n",
       "\n",
       "Removing images with no positive labels...\n",
       "-------------------------------------\n",
-      "Number of no label patches before removal: 113\n",
-      "Keep n labels: 56\n",
-      "# of keep idx: 56\n",
-      "Number of no label patches after removal: 57\n",
+      "Number of no label patches before removal: 147\n",
+      "Keep n labels: 74\n",
+      "# of keep idx: 74\n",
+      "Number of no label patches after removal: 73\n",
       "\n",
       "Dataset sizes:\n",
-      "    X_train: (81, 512, 512, 3)\n",
-      "    y_train: (81, 512, 512, 1)\n",
-      "    X_test: (40, 512, 512, 3)\n",
-      "    y_test: (40, 512, 512, 1)\n",
+      "    X_train: (70, 512, 512, 5)\n",
+      "    y_train: (70, 512, 512, 1)\n",
+      "    X_test: (35, 512, 512, 5)\n",
+      "    y_test: (35, 512, 512, 1)\n",
       "\n",
       "Final concatenated sizes:\n",
       "\n",
       "-------------------------\n",
       "\n",
-      "X_train: (81, 512, 512, 3)\n",
-      "y_train: (81, 512, 512, 1)\n",
-      "X_test: (40, 512, 512, 3)\n",
-      "y_test: (40, 512, 512, 1)\n"
+      "X_train: (70, 512, 512, 5)\n",
+      "y_train: (70, 512, 512, 1)\n",
+      "X_test: (35, 512, 512, 5)\n",
+      "y_test: (35, 512, 512, 1)\n"
      ]
     }
    ],
@@ -394,8 +331,9 @@
     "\n",
     "X_train, y_train, X_test, y_test = utils.prep_data(\n",
     "    \"data/WA_Kivalina_01_20219703/20cm/Ortho\",\n",
-    "    include_nir=False,\n",
-    "    add_ndvi=False,\n",
+    "    include_nir=True,\n",
+    "    add_ndvi=True,\n",
+    "    select_labels=[1, 2],\n",
     "    squash=True,\n",
     "    img_size_override=2500,\n",
     ")\n",
@@ -430,6 +368,46 @@
     "print(\"y_train:\", y_train.shape)\n",
     "print(\"X_test:\", X_test.shape)\n",
     "print(\"y_test:\", y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "349.9316539738332"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(X_train.nbytes / 1024 / 1024.2) - (X_train.astype(np.float1).nbytes / 1024 / 1024.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "139.9726615895333"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.nbytes / 1024 / 1024.2"
    ]
   },
   {
